fix(footer): prevent overflow

--- a/src/footer.scss
+++ b/src/footer.scss
@@ -21,7 +21,7 @@
         height: 0;
         border-style: solid;
 
-        $shape-width: 500px;
+        $shape-width: min(100vw, 500px);
 
         &:nth-child(1) {
             border-width: calc($shape-width / 2) 0 0 $shape-width;
